--- a/config.yml
+++ b/config.yml
@@ -77,12 +77,8 @@ params:
     Content: Welcome
 
   socialIcons:
-    - name: twitter
-      url: "https://twitter.com/"
-    - name: stackoverflow
-      url: "https://stackoverflow.com"
     - name: github
-      url: "https://github.com/"
+      url: "https://github.com/mzembron"
 
   analytics:
     google:
